test/test-cases/negative/lexical-errors.pas

Program test(input, output);

Var 3x,y: integer;
Begin
  z := 3;
  read(r, y)
End.
